--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,8 +1,8 @@
 # Project information
-site_name: Openterface Mini-KVM | Turn Your Laptop into a KVM Console
-site_url: https://openterface.com/
+site_name: Openterface Mini-KVM | ノートパソコンをKVMコンソールに変える
+site_url: https://ja.openterface.com/
 site_author: Billy Wang
-site_description: A Feature-rich, Open-source and Community-driven KVM-over-USB Solution
+site_description: 機能豊富でオープンソース、コミュニティ主導のKVM-over-USBソリューション
 
 # Repository
 repo_name: Openterface
@@ -10,13 +10,12 @@ repo_url: https://github.com/TechxArtisan/Openterface
 
 # Copyright
 copyright: >-
-  Copyright &copy; All rights reserved. 2023 <a href="https://www.openterface.com">Openterface MiniKVM</a>, Guangzhou Billio Tech. Co., Ltd. <br>
-  <a href="">Home</a> |
-  <a href="/terms-of-service">Terms of Service</a> |
-  <a href="/privacy-policy">Privacy Policy</a> | 
-  <a href="#__consent">Cookie Settings</a> | 
-  <a href="/contact">Contact Us</a>
-
+  著作権 © 全ての権利を保有。2023 <a href="https://www.openterface.com">Openterface MiniKVM</a>, 広州比利奥科技有限公司<br>
+  <a href="">ホーム</a> |
+  <a href="/terms-of-service">利用規約</a> |
+  <a href="/privacy-policy">プライバシーポリシー</a> | 
+  <a href="#__consent">クッキー設定</a> | 
+  <a href="/contact">お問い合わせ</a>
 
 extra_css:
   - assets/stylesheets/extra.css
@@ -71,7 +70,7 @@ extra:
   
   alternate:
     - name: English 🇺🇸🇬🇧🇨🇦🇦🇺
-      link: /
+      link: https://openterface.com/
       lang: en
     # - name: 中文简体 🇨🇳
     #   link: https://zh.openterface.com/
@@ -79,8 +78,8 @@ extra:
     # - name: 中文繁體 🇭🇰
     #   link: https://tw.openterface.com/
     #   lang: zh-Hant
-    # - name: 日本語 🇯🇵
-    #   link: https://jp.openterface.com/
+    - name: 日本語 🇯🇵
+      link: https://jp.openterface.com/
     #   lang: ja
     # - name: 한국어 🇰🇷
     #   link: https://kr.openterface.com/
@@ -174,29 +173,24 @@ plugins:
       archive: false
 
 nav:
-  - Home: index.md
-  - Documentation:
-    - Quick Start: quick-start.md
-    - Why Openterface: why-openterface-minikvm.md
-    - Use Cases: use-cases.md
-    - Specifications: specifications.md
-    - What's in the Box: whats-in-the-box.md
-    - How It Works: how-it-works.md
-    - Comparison: comparison.md
-    - FAQs: faq.md
-    # - Concepts: concepts.md
-    # - App: software.md
-
-  - FAQs: faq.md
-  - Posts:
+  - ホーム: index.md
+  - ドキュメント:
+    - クイックスタート: quick-start.md
+    - Openterfaceの理由: why-openterface-minikvm.md
+    - 使用事例: use-cases.md
+    - 仕様: specifications.md
+    - 箱の中身: whats-in-the-box.md
+    - 仕組み: how-it-works.md
+    - 比較: comparison.md
+    - よくある質問: faq.md
+  - よくある質問: faq.md
+  - 投稿:
     - blog/index.md
-  # - Topics: tags.md
-  - About:
-    - Contact: contact.md
-    - Acknowledgements: acknowledgements.md
-    - Policies:
-      - Privacy Policy: privacy-policy.md
-      - Terms of Service: terms-of-service.md
-      - Return, Refunds & Warranty: return-refunds-warranty.md
-  # - Download: download.md
-  - Subreddit: https://www.reddit.com/r/Openterface_miniKVM/
+  - について:
+    - 連絡先: contact.md
+    - 謝辞: acknowledgements.md
+    - ポリシー:
+      - プライバシーポリシー: privacy-policy.md
+      - 利用規約: terms-of-service.md
+      - 返品・払戻し・保証: return-refunds-warranty.md
+  - サブレディット: https://www.reddit.com/r/Openterface_miniKVM/
