--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -27,7 +27,7 @@ extra_css:
 theme:
   name: material
   custom_dir: docs/overrides
-  language: en
+  language: ja
   font:
     text: Roboto
     code: Roboto Mono
