--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -103,7 +103,7 @@ extra:
     - name: English
       link: https://openterface.com/
       lang: en
-    - name: 简中文
+    - name: 简体中文
       link: https://cn.openterface.com/
     - name: 日本語
       link: https://jp.openterface.com/
