--- a/.github/workflows/build-mkdocs.yml
+++ b/.github/workflows/build-mkdocs.yml
@@ -38,4 +38,5 @@ jobs:
         run: |
           sed -i "/^extra:/a\  qt_version: ${{ env.QT_VERSION }}" mkdocs.yml
           sed -i "/^extra:/a\  android_version: ${{ env.ANDROID_VERSION }}" mkdocs.yml
+          sed -i "/^extra:/a\  macos_version: ${{ env.MACOS_VERSION }}" mkdocs.yml
       - run: mkdocs gh-deploy --force
