--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -5,7 +5,7 @@ site_author: Openterface
 site_description: 機能豊富でオープンソース、コミュニティ主導のKVM-over-USBソリューション
 
 # Repository
-repo_name: Openterface
+repo_name: Openterface_jp
 repo_url: https://github.com/TechxArtisanStudio/Openterface_jp
 
 # Copyright
