--- a/docs/product/.nav.yml
+++ b/docs/product/.nav.yml
@@ -14,6 +14,8 @@ nav:
         - minikvm/拡張ピン.md
         - よくある質問とトラブルシュート: /faq/minikvm/op-minikvm/
         - なぜOpenterfaceなのか: /faq/usbkvm/openterface/
+    - Mini-KVM Lite (プレローンチ):
+        - minikvm-lite/pre-launch.md
     - アクセサリー:
         - accessories/index.md
         - VGAからHDMIケーブル1m: accessories/vga-to-hdmi-cable.md
